# Data-Disc

./: .gitignore  README.md  pyproject.toml
data/: data_WCP500.csv  data_WCP500.pickle
src/: generate_problem.py  normalize.py  util.py  visualize_with_color.py  visualize_with_norm.py
